<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
  <data>
    <variable name="viewModel" type="com.nshmura.feed.presentation.viewmodel.LoginViewModel"/>
  </data>

  <FrameLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center_horizontal"
      android:layout_margin="@dimen/space_small"
      android:padding="@dimen/space_small"
      android:background="?android:attr/colorBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:paddingBottom="@dimen/space_small"
          android:text="@string/login_title"
          android:textSize="@dimen/font_title"/>

      <EditText
          android:id="@+id/login_id"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/login_id_hint"
          app:binding="@{viewModel.id}"/>

      <EditText
          android:id="@+id/login_password"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="textPassword"
          android:hint="@string/login_passowrd"
          app:binding="@{viewModel.password}"/>

      <Button
          android:id="@+id/login_submit"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/login_submit"
          style="?android:attr/buttonBarButtonStyle"/>
    </LinearLayout>

  </FrameLayout>

</layout>